# sharepoint-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
sharepoint_cli/: __init__.py  __main__.py
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  reference.rs  util.rs
src/auth/: device_code.rs  mod.rs  token_cache.rs
src/commands/: auth.rs  config.rs  drives.rs  files.rs  init.rs  mod.rs  sites.rs
src/graph/: download.rs  drives.rs  mod.rs  search.rs  sites.rs
tests/: auth_concurrent_refresh.rs  auth_refresh.rs  auth_token_retry.rs  cmd_auth_env_refresh_token.rs  cmd_auth_login_canonicalizes_tenant.rs  cmd_auth_login_quiet_prompts.rs  cmd_auth_logout.rs  cmd_auth_no_client_id.rs  cmd_auth_status.rs  cmd_clap_error_is_json.rs  cmd_config.rs  cmd_drives_list.rs  cmd_drives_list_pagination.rs  cmd_files_find.rs  cmd_files_ls.rs  cmd_files_ls_pagination.rs  cmd_files_ls_recursive_rejects_pagination_flags.rs  cmd_files_stat_download.rs  cmd_init_quiet.rs  cmd_sites_list.rs  cmd_sites_use.rs  device_code_polling.rs  graph_download.rs  graph_page_token_host_validation.rs  graph_retry.rs
