[package]
name = "sharepoint-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Agent-friendly SharePoint Online CLI with JSON output, structured exit codes, and schema introspection"
license = "MIT"
repository = "https://github.com/rvben/sharepoint-cli"
homepage = "https://github.com/rvben/sharepoint-cli"
keywords = ["sharepoint", "microsoft", "graph", "cli", "files"]
categories = ["command-line-utilities"]

[[bin]]
name = "sharepoint"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
toml = "0.8"
owo-colors = "4"
dirs = "6"
base64 = "0.22"
terminal_size = "0.4"
url = "2"
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
tempfile = "3"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time", "test-util"] }
