[package]
name = "sharepoint-cli"
version = "0.0.5"
edition = "2024"
rust-version = "1.90"
description = "Agent-friendly SharePoint Online CLI with JSON output, structured exit codes, and schema introspection"
license = "MIT"
repository = "https://github.com/rvben/sharepoint-cli"
homepage = "https://github.com/rvben/sharepoint-cli"
keywords = ["sharepoint", "microsoft", "graph", "cli", "files"]
categories = ["command-line-utilities"]

[[bin]]
name = "sharepoint"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "io-std", "time", "sync"] }
toml = "0.8"
dirs = "6"
base64 = "0.22"
terminal_size = "0.4"
url = "2"
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
httpdate = "1"
tempfile = "3"
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time", "sync", "test-util"] }
