[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sharepoint-cli-rs"
dynamic = ["version"]
description = "Agent-friendly SharePoint Online CLI with JSON output, structured exit codes, and schema introspection"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Ruben Jongejan", email = "ruben.jongejan@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Office/Business",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rvben/sharepoint-cli"
Repository = "https://github.com/rvben/sharepoint-cli.git"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
python-packages = ["sharepoint_cli"]
strip = true
